add contact section

--- a/config/db.php.dist
+++ b/config/db.php.dist
@@ -10,10 +10,9 @@
  * @author    WCS <contact@wildcodeschool.fr>
  * @license  --
  * @link     https://github.com/WildCodeSchool/simple-mvc
- *
- */
 
-define('APP_DB_USER', 'user');
-define('APP_DB_PWD', 'password');
+
+define('APP_DB_USER', 'manoa');
+define('APP_DB_PWD', 'mbr39912072');
 define('APP_DB_HOST', 'localhost');
 define('APP_DB_NAME', 'database_name');
